--- a/friend_finder_backend/Friend-finder-service/src/main/resources/application.properties
+++ b/friend_finder_backend/Friend-finder-service/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-spring.application.name=friend_finder
+spring.application.name=friend-finder-service
 
-server.port=5050
+server.port=8081
 
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=friend-finder;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=sa@123#321
+spring.datasource.username=maher
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.show-sql=true
