add banners to services

--- a/friend_finder_backend/Friend-finder-service/src/main/resources/application.properties
+++ b/friend_finder_backend/Friend-finder-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=friend-finder-service
 
 server.port=8081
 
+spring.banner.location=classpath:banners/banner.txt
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=friend-finder;encrypt=true;trustServerCertificate=true
 spring.datasource.username=maher
 spring.datasource.password=123
